# CalculatingMethod

./: CMakeLists.txt  basic_function.cpp  basic_function.h  main.cpp
py/: task_5_1.py
task_1/: CMakeLists.txt  implementation.cpp  interpolationNewton.h  main.cpp  task_1.cpp  task_1.h
task_2/: reverse_interpolation.cpp  reverse_interpolation.cpp.txt  reverse_interpolation.h  reverse_interpolation.h.txt  root_search.cpp  root_search.cpp.txt  root_search.h  root_search.h.txt  task_2.h  task_2.h.txt  task_2_main.cpp  task_2_main.cpp.txt
task_3/: task_3_main.cpp  task_3_main.h  task_3_main.txt  task_3main.cpp
task_4/: task_4main.cpp  task_4main.h
task_5/: task_5_main.cpp  task_5main.h
task_6/: task6_main.cpp  task6_main.h
